# LabWork8

task1/: CMakeLists.txt  header.h  main.cpp  manag-binary-funcs.cpp  manag-ent-funcs.cpp  manag-out-funcs.cpp  mem-funcs.cpp  struct.h
task2/: CMakeLists.txt  header.h  library.txt  main.cpp  manag-ent-funcs.cpp  manag-out-funcs.cpp  manag-txt-funcs.cpp  mem-funcs.cpp  struct.h
